--- a/PROJECT_WEEK_3/report.html
+++ b/PROJECT_WEEK_3/report.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-                <embed src="Death_Mortality_REPORT_1.pdf" type="application/pdf" width="100%" height="1000px" />
+                <embed src="Death_Mortality.pdf" type="application/pdf" width="100%" height="1000px" />
 
     </div>
 </body>
